--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,12 +7,14 @@
   padding: 10px 0;
   z-index: 10;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); 
+  position: relative;
 }
 
 .navbar {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  position: relative;
 }
 
 .navbar ul {
@@ -47,6 +49,10 @@
   font-size: 1.5em;
   cursor: pointer;
   padding: 0 1rem;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .theme-toggle:hover {
